Fixed content jumping, 404 page, misc updates

--- a/src/index.css
+++ b/src/index.css
@@ -35,13 +35,13 @@ h1 {
     overflow: hidden;
 }
 
-a{
+a {
     color: #4DA3FF;
     font-weight: 400;
     text-decoration: none;
 }
 
-a:hover{
+a:hover {
     color: #0056b3;
     text-decoration: underline;
 }
@@ -49,6 +49,7 @@ a:hover{
 .navbar {
     padding-top: 17px;
 }
+
 .no-select {
     pointer-events: none;
     -webkit-touch-callout: none;
@@ -75,9 +76,26 @@ a:hover{
     margin-bottom: 20px;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.img-wrapper-wrapper{
+    max-width: 200px;
+    min-height: 200px;
+    width: 50%;
+    height: 200px;
+}
+
 .img-center-wrapper {
     max-width: 200px;
-    width: 50%;
+    width: 100%;
+    opacity: 0;
+    animation: 0.8s ease-in-out 0s forwards fadeIn;
 }
 
 .img-circle {
@@ -86,6 +104,7 @@ a:hover{
 
 .paper-padded {
     padding: 30px;
+    padding-top: 0px;
     padding-left: 30px !important;
 }
 
@@ -100,18 +119,29 @@ a:hover{
 }
 
 .faded {
-    opacity: 0.7;
+    opacity: 0.75;
+}
+
+.faded-half {
+    opacity: 0.3;
+}
+
+.project-title {
+    font-size: 2em;
+    padding: 0px;
 }
 
 .project-icon {
     width: 1.5em;
     height: 1.5em;
     position: relative;
-    bottom: 3px;
-    padding: 1px;
+    bottom: -12px;
     margin-right: 5px;
 }
 
+.project-screenshot-wrapper{
+    min-width: 50%;
+}
 .project-screenshot {
     height: auto;
     width: auto;
@@ -120,6 +150,8 @@ a:hover{
     vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
+    opacity: 0;
+    animation: 0.8s ease-in-out 0s forwards fadeIn;
     transition: max-width 0.5s ease;
     transition-delay: 0.5s;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px, rgba(0, 0, 0, 0.23) 0px 3px 10px;
